--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "/dada/build",
+  "homepage": "/money2022/build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
