--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.3"
+    "semantic-ui-react": "^2.1.3",
+    "uuid": "^8.3.2"
   },
   "browserslist": {
     "production": [
